@@ -1,3 +1,8 @@
+2013-08-05  Glenn Morris  <rgm@gnu.org>
+
+	* calendar/calendar.el (calendar-generate-month):
+	Fix for calendar-column-width != 1 + calendar-day-digit-width.
+
 2013-08-05  Juanma Barranquero  <lekktu@gmail.com>
 
 	* desktop.el (desktop-clear): Use new name of sort predicate.
